fixed layout on smaller screens

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -5,7 +5,6 @@
     width: 100%;
     background-color:  rgb(105, 105, 105);
     color: white;
-    text-align: center;
 }
 
 .footer {
